--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -498,7 +498,7 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0.5px;
   text-transform: uppercase;
   display: inline-block;
-  padding: 12px 30px;
+  padding: 12px 25px;
   border-radius: 50px;
   transition: 0.3s;
   line-height: 1;
@@ -935,7 +935,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
